2012-05-04  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/bayer_carrier/CMakeLists.txt: make visual studio 
	accept libdc1394 code, however begrudgingly [thanks Giorgio Metta]

	* src/idls/thrift/CMakeLists.txt: make visual studio accept
	thrift code, however begrudgingly [thanks Giorgio Metta]

2012-05-03 Lorenzo Natale <lorenzo.natale@iit.it>
    * RFModule: signal handling anticipated within the constructor
    in order to catch possible ctrl-c also during the configure() method.

2012-05-03 Lorenzo Natale <lorenzo.natale@iit.it>
    * Following Gaze Interface change tagging version number: 2.3.17
	
2012-05-02  Andrea Del Prete  <andrea.delprete@iit.it>
    * src/libYARP_sig/src/Matrix.cpp
    * src/libYARP_sig/harness/MatrixTest.cpp
    Fix bug in method Matrix::read and modify related test.
    
2012-05-02  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/idls/thrift: merge from https://github.com/paulfitz/yarp_thrift
	This is a basic thrift-based IDL, now available as an optional
	plugin (turn on "CREATE_IDLS" in the CMake gui, reconfigure, then
	turn on "ENABLE_yarpidl_thrift").  Basic example in example/idl.
	This plugin will be subject to change for some time.

2012-04-23  Andrea Del Prete  <andrea.delprete@iit.it>
    * src/libYARP_math/src/math.cpp
    * src\libYARP_math\include\yarp\math\Math.h
    * src/libYARP_sig/src/Matrix.cpp
    Add methods for pseudo-inverse that return singular value vector.
    Some bug fixes and performance improvements in Matrix.
    
2012-04-23  Ugo Pattacini  <ugo.pattacini@iit.it>
    * src/libYAR_dev/include/yarp/dev/GazeControl.h
    Added a couple of new methods to check saccades termination

2012-04-06  Andrea Del Prete  <andrea.delprete@iit.it>
    * src/libYARP_math/src/math.cpp
    * src\libYARP_math\include\yarp\math\Math.h
    * src\libYARP_math\harness\MathTest.cpp
    Add crossProductMatrix, outer product and related tests.

2012-04-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
