@@ -14,6 +14,7 @@ if (CREATE_OPTIONAL_CARRIERS)
     add_subdirectory(tcpros_carrier)
     add_subdirectory(mjpeg_carrier)
     add_subdirectory(bayer_carrier)
+    add_subdirectory(priority_carrier)
   END_PLUGIN_LIBRARY(yarpcar)
   set_property(GLOBAL APPEND PROPERTY YARP_LIBS yarpcar ${yarpcar_LIBRARIES})
   install(TARGETS yarpcar EXPORT YARP COMPONENT runtime DESTINATION lib${LIB_SUFFIX})
